<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Main</string>
    <string name="on_create">On Create</string>
    <string name="on_create_cont">Conteo</string>
    <string name="on_start">On Start</string>
    <string name="on_start_cont">Conteo</string>
    <string name="on_restart">On Restart</string>
    <string name="on_restart_cont">Conteo</string>
    <string name="on_resume">On Resume</string>
    <string name="on_resume_cont">Conteo</string>
    <string name="on_pause">On Pause</string>
    <string name="on_pause_cont">Conteo</string>
    <string name="on_stop">On Stop</string>
    <string name="on_stop_cont">Conteo</string>
    <string name="on_destroy">On Destroy</string>
    <string name="on_destroy_cont">Conteo</string>
    <string name="title">Contador Activity</string>
    <string name="ToastOnCreate">OnCreate</string>
    <string name="ToastOnStart">OnStart</string>
    <string name="ToastOnRestart">OnRestart</string>
    <string name="ToastOnResume">OnResume</string>
    <string name="ToastOnPause">OnPause</string>
    <string name="ToastOnStop">OnStop</string>
    <string name="ToastOnDestroy">OnDestroy</string>

</resources>